--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Final Term Mobile</string>
+    <string-array name="payment_methods">
+        <item>COD</item>
+        <item>Momo</item>
+        <item>VnPay</item>
+    </string-array>
 </resources>
